# bin-lookup-api-py

./: pyproject.toml
bin_lookup_api/: application.py  lifespan.py  logging.py  main.py  routes.py  settings.py
bin_lookup_api/api/: models.py
bin_lookup_api/api/v1/healthcheck/: handlers.py  router.py
bin_lookup_api/api/v1/lookup/: handlers.py  router.py
bin_lookup_api/datasources/: index.py  redis.py
bin_lookup_api/services/: bin_service.py
tests/: test_lookup.py
